styles/style.css
/*
Colors to use:
dark blue: #06365f
light blue: #1c5380
*/

html{
  background-image:url(../images/bgtile.png);
  background-repeat: repeat-x;
}
body {
  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
  margin: 0;
}
.title{
  font-size: 24px;
  color: #184a72;
  margin-top: 15px;
  line-height: 30px;
}
.front {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 8%;
}
.frontbox{
  display: flex;
  flex-direction: column;
  margin: 0 0 0 20px;
}
.logo{
  max-height: 78px;
  max-width: 314px;
}
.logoandbutton{
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.button{
  display: block;
  border: 1px solid #1c5380;
  padding: 0.6em;
  text-decoration: none;
  font-weight: 600;
  color: white;
  border-radius: 3px;
  padding-left: 15px;
background-image: -webkit-linear-gradient(top, #6f97b6, #3f729b);
box-shadow:0px 2px 5px 0  rgba(0,0,0,0.5);
} 

#imga{
  position: relative;
  top: 3px;
  left:-6px;
}

.frame{
  width: 504px;
  height: 284px;
  background-image:url("../images/frame.png");
  background-repeat: no-repeat;
}
.presentation{
padding: 20px 20px 0 40px;
line-height: 23px;
font-size: 16px;
}

.iglinks{
  display: flex;
  margin-top: 50px;
  list-style-type: none;
  justify-content: center;
}
.iglinks a{
  text-decoration: none;
  margin-right: 10px;
  font-weight: bold;
  text-transform: uppercase;
  color: #3c729e;
  letter-spacing: 0.2px;
}
.downlinks{
  padding-top: 32px;
  margin-top:60px;
  padding-left: 40px;
}
.iglinks .copyright{
  color: gray;
  margin-left: 10px;
}

